# job-agent-matcher

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  collect.py
app/collectors/: base_collector.py  boss_zhipin_collector.py
app/core/: config.py
app/db/: __init__.py  models.py  session.py
app/integrations/: __init__.py
app/repositories/: __init__.py  job_repository.py  match_repository.py  run_repository.py
app/schemas/: __init__.py  collect.py  jd.py  job.py  match.py  pipeline.py  report.py  run.py  skill.py  workflow.py
app/services/: ai_resume_job_analyzer.py  collection_safety.py  evaluation.py  jd_structurer.py  job_agent_workflow.py  job_normalizer.py  (+7 more)
docs/: evaluation.md
scripts/: analyze_resume_jobs.py  analyze_skills_export.py  check_collection_safety.py  collect_boss_jobs.py  evaluate_job_agent.py  export_public_snapshot.py  import_boss_export.py  normalize_boss_export.py  resume_full_job_agent.py  run_full_job_agent.py  run_job_pipeline.py  structure_jd_export.py
tests/: test_ai_resume_job_analyzer.py  test_analyze_resume_jobs_cli.py  test_boss_collector_adapter.py  test_collect_boss_jobs_cli.py  test_collection_safety.py  test_detail_merge.py  test_evaluation.py  test_export_public_snapshot.py  test_jd_structurer.py  test_job_agent_workflow.py  test_job_normalizer.py  test_job_repository.py  test_pipeline_service.py  test_report_generator.py  test_resume_full_job_agent.py  test_resume_job_matcher.py  test_resume_reader.py  test_salary_parser.py  test_skill_analyzer.py
(+13 files in other folders)
